circt-bc260128-00000782/origin/error.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: f"
         ^
<stdin>:3:10: note: see current operation: %7 = "sim.fmt.literal"() <{literal = "Error: f"}> : () -> !sim.fstring
